Added Ammo, HasWeapon, Ignore, Karma, Object, String

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,19 +28,19 @@ nav:
         - 'Manner': 'objects/manner.md'
         - 'Faction': 'objects/faction.md'
         - 'ItemType': 'objects/itemtype.md'
-        - 'String (TBD)': 'TBD.md'
+        - 'String': 'objects/string.md'
         - 'Timer': 'objects/timer.md'
         - 'Object': 'objects/object.md'
         - 'DistTo': 'objects/distto.md'
         - 'AngleTo': 'objects/angleto.md'
         - 'Visible': 'objects/visible.md'
-        - 'HasWeapon (TBD)': 'TBD.md'
+        - 'HasWeapon': 'objects/hasweapon.md'
         - 'RelationTo': 'objects/relationto.md'
         - 'Relation': 'objects/relation.md'
         - 'Name': 'objects/name.md'
-        - 'Ammo (TBD)': 'TBD.md'
-        - 'Ignore (TBD)': 'TBD.md'
-        - 'Karma (TBD)': 'TBD.md'
+        - 'Ammo': 'objects/ammo.md'
+        - 'Ignore': 'objects/ignore.md'
+        - 'Karma': 'objects/karma.md'
         - 'VoicePrefix': 'objects/voiceprefix.md'
     - '-- State Functions --':
         - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
