--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,6 +20,7 @@ nav:
         - 'Patterns (TBD)': 'TBD.md'
         - 'Blocks (TBD)': 'TBD.md'
         - 'Events (TBD)': 'TBD.md'
+        - 'Hammer Functions (TBD)': 'TBD.md'
         - 'Development/WIP Files': 'wipp3sfiles.md'
     - 'Attribute Checking':
         - 'IfAttr, SetAttr, CheckAttr, ChangeAttr, RemoveAttr': 'attribchecking/attributes.md'
