--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,12 +43,18 @@ nav:
         - 'Ignore': 'objects/ignore.md'
         - 'Karma': 'objects/karma.md'
         - 'VoicePrefix': 'objects/voiceprefix.md'
+    - 'Catharsis Reborn-only Functions':
+        - 'SetAngle, SetOrigin (TBD)': 'TBD.md'
+        - 'EntityEffect (TBD)': 'TBD.md'
+        - 'ScreenShake (TBD)': 'TBD.md'
+        - 'PrintAttr (TBD)': 'TBD.md'
     - 'State Functions':
         - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'statefuncs/wait_waitforend_repeat.md'
         - 'StateMatrix': 'statefuncs/statematrix.md'
-        - 'CallState, CallPattern': 'statefuncs/callstate_callpattern.md'
+        - 'CallState, CallPattern, Call (WIP)': 'statefuncs/callstate_callpattern.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'statefuncs/activitypattern_funcs.md'
+        - 'SendState, SendPattern (TBD)': 'TBD.md'
     - 'Misc Functions':
         - 'Effect': 'miscfuncs/effect.md'
         - 'FireEvent, FireEventEX, FireUser, OnUser, FireInput, AreaEvent, EntFireUser, EntFireInput (WIP)': 'miscfuncs/fire_event_and_user_funcs.md'
