--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
         - 'EntityEffect (TBD)': 'TBD.md'
         - 'ScreenShake (TBD)': 'TBD.md'
         - 'PrintAttr (TBD)': 'TBD.md'
+        - 'IfCanSee (TBD)': 'TBD.md'
     - 'State Functions':
         - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'statefuncs/wait_waitforend_repeat.md'
