--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,11 +44,11 @@ nav:
         - 'Karma': 'objects/karma.md'
         - 'VoicePrefix': 'objects/voiceprefix.md'
     - 'Catharsis Reborn-only Functions':
-        - 'SetAngle, SetOrigin (TBD)': 'TBD.md'
-        - 'EntityEffect (TBD)': 'TBD.md'
-        - 'ScreenShake (TBD)': 'TBD.md'
-        - 'PrintAttr (TBD)': 'TBD.md'
-        - 'IfCanSee (TBD)': 'TBD.md'
+        - 'SetAngle, SetOrigin': 'wjifuncs/setangle_setorigin.md'
+        - 'EntityEffect': 'wjifuncs/entityeffect.md'
+        - 'ScreenShake': 'wjifuncs/screenshake.md'
+        - 'PrintAttr': 'wjifuncs/printattr.md'
+        - 'IfCanSee': 'wjifuncs/ifcansee.md'
     - 'State Functions':
         - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'statefuncs/wait_waitforend_repeat.md'
