Update mkdocs, added serve.bat

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -117,6 +117,28 @@ nav:
         - 'JWB (Jen Walcotts Bodyguard)': 'missions/jwb.md'
         - 'CM (Cash Mart Robbery)': 'missions/cm.md'
     - 'Mission Script Files (Good Path)':
-        - 'n/a': 'TBD.md'
-    - 'Mission Script Files (Evil Path)':
-        - 'n/a': 'TBD.md'
+        - 'PA (Police Academy) TBD': 'TBD.md'
+        - 'PM1 (Patrol Mission 1) TBD': 'TBD.md'
+        - 'SUB (Save Uwe Bolls Career) TBD': 'TBD.md'
+        - 'AS (Arcade Shootout) TBD': 'TBD.md'
+        - 'HI (Homeland Insecurity) TBD': 'TBD.md'
+        - 'MLG (Police Monkey Test Lab Assault) TBD': 'TBD.md'
+        - 'PM2 (Patrol Mission 2) TBD': 'TBD.md'
+        - 'ZHQA (Eco Zealot HQ Assault) TBD': 'TBD.md'
+        - 'GRG (Police Gay Rodeo) TBD': 'TBD.md'
+        - 'MC (The Motorcade) TBD': 'TBD.md'
+        - 'DLG (Police Daveland) TBD': 'TBD.md'
+        - 'AA (Apocalypse Again) TBD': 'TBD.md'
+    - 'Mission Script Files (Insane Path)':
+        - 'MTZ (Meet the Zealots) TBD': 'TBD.md'
+        - 'CW (The Champ Whisperer) TBD': 'TBD.md'
+        - 'SRM (Segway Repo Man) TBD': 'TBD.md'
+        - 'SBE (Slave Boy Escort) TBD': 'TBD.md'
+        - 'MLI (Monkey Test Lab Assault) TBD': 'TBD.md'
+        - 'KMTD (Krotchy Meal Toy Delivery) TBD': 'TBD.md'
+        - 'MVC (Mexican Viagra Courier) TBD': 'TBD.md'
+        - 'PWAC (Prisoner Without A Clue) TBD': 'TBD.md'
+        - 'BDK (Battle Damage Krotchy) TBD': 'TBD.md'
+        - 'GRI (Gay Rodeo) TBD': 'TBD.md'
+        - 'CRM (Champ Rescue) TBD': 'TBD.md'
+        - 'DLI (Daveland) TBD': 'TBD.md'
