--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,6 +15,7 @@ nav:
     - 'Postal3Script (WIP)':
         - 'Index': 'index.md'
         - 'What is Postal3Script?': 'whatispostal3script.md'
+        - 'Debugging Postal3Script': 'debugging.md'
         - 'Structure (TBD)': 'TBD.md'
         - 'States (TBD)': 'TBD.md'
         - 'Patterns (TBD)': 'TBD.md'
@@ -48,12 +49,13 @@ nav:
         - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
         - 'Wait, WaitForEnd, Repeat': 'statefuncs/wait_waitforend_repeat.md'
         - 'StateMatrix': 'statefuncs/statematrix.md'
-        - 'CallState, CallPattern, Call (WIP)': 'statefuncs/callstate_callpattern.md'
+        - 'CallState, CallPattern, Call': 'statefuncs/callstate_callpattern.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'statefuncs/activitypattern_funcs.md'
-        - 'SendState, SendPattern (TBD)': 'TBD.md'
+        - 'SendState, SendPattern': 'statefuncs/sendstate_sendpattern.md'
     - 'Misc Functions':
+        - 'AreaEvent': 'miscfuncs/areaevent.md'
         - 'Effect': 'miscfuncs/effect.md'
-        - 'FireEvent, FireEventEX, FireUser, OnUser, FireInput, AreaEvent, EntFireUser, EntFireInput (WIP)': 'miscfuncs/fire_event_and_user_funcs.md'
+        - 'FireEvent, FireEventEX, FireUser, OnUser, FireInput, EntFireUser, EntFireInput (WIP)': 'miscfuncs/fire_event_and_user_funcs.md'
         - 'Item, SpawnItem': 'miscfuncs/item_spawnitem.md'
         - 'AddFluid': 'miscfuncs/addfluid.md'
         - 'Anchor, TargetAnchor (TBD)': 'TBD.md'
