--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ nav:
         - 'VoicePrefix': 'objects/voiceprefix.md'
     - 'State Functions':
         - 'State, Pattern, ExecutePattern': 'statefuncs/func_state_pattern_executepattern.md'
-        - 'Wait, WaitForEnd, Repeat': 'statefuncs/wait_waitforend_repeat.md'
+        - 'Wait, WaitForEnd, Repeat, Return': 'statefuncs/wait_waitforend_repeat.md'
         - 'StateMatrix': 'statefuncs/statematrix.md'
         - 'CallState, CallPattern, Call': 'statefuncs/callstate_callpattern.md'
         - 'StoreActivityPattern, ExecuteActivityPattern, ClearActivityPattern': 'statefuncs/activitypattern_funcs.md'
@@ -58,11 +58,11 @@ nav:
         - 'FireEvent, FireEventEX, FireUser, OnUser, FireInput, EntFireUser, EntFireInput (WIP)': 'miscfuncs/fire_event_and_user_funcs.md'
         - 'Item, SpawnItem': 'miscfuncs/item_spawnitem.md'
         - 'AddFluid': 'miscfuncs/addfluid.md'
-        - 'Anchor, TargetAnchor (TBD)': 'TBD.md'
+        - 'Anchor, TargetAnchor': 'miscfuncs/anchor.md'
     - 'NPC Functions':
         - 'Say': 'npcfuncs/say.md'
         - 'EmitSound': 'npcfuncs/emitsound.md'
-        - 'Gesture, ResetGesture, ResetSequence': 'npcfuncs/gesture_resetgesture_resetsequence.md'
+        - 'Gesture, ResetGesture, Sequence, ResetSequence': 'npcfuncs/gesture_resetgesture_resetsequence.md'
         - 'Headblob': 'npcfuncs/headblob.md'
         - 'NPC': 'npcfuncs/NPC.md'
     - 'NPC Behavior Functions':
